--- a/style.css
+++ b/style.css
@@ -19,14 +19,13 @@ body {
 .nome {
     position: fixed;
     top: 0;
-    width: 100%;
     text-align: center;
     color: rgb(61, 61, 61);
     background-color: rgb(187, 187, 187);
-    border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     padding: 5px;
     margin: 0px;
+    border: 1px solid rgb(141, 141, 141);
     font-size: 30px;
 }
 
@@ -45,8 +44,8 @@ body {
 }
 
 .titulo {
+    border: 1px solid rgb(119, 119, 119);
     color: rgb(61, 61, 61);
-    background-color: rgb(168, 168, 168);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     padding-left: 10px;
