--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(236, 236, 236);
 }
 
 #informacoes {
@@ -26,7 +25,7 @@ body {
     padding: 5px;
     margin: 0px;
     border: 1px solid rgb(141, 141, 141);
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .foto {
@@ -36,7 +35,7 @@ body {
     border: 1px solid rgb(61, 61, 61);
 }
 
-.descricao {
+.info {
     text-align:justify;
     margin: 10px;
     size: 110;
@@ -50,7 +49,7 @@ body {
     border-bottom-right-radius: 10px;
     padding-left: 10px;
     background-color: rgb(168, 168, 168);
-    width: 50vh;
+    width: 400px;
 }
 
 .contato {
@@ -65,11 +64,27 @@ body {
     color: rgb(255, 255, 255);
     border-radius: 5px;
     transition: background-color 0.2s, color 0.2s;
-    
+}
+
+.caracteristica {
+    color: rgb(63, 63, 63);
+    background-color: rgb(197, 197, 197);
+    border-radius: 5px;
+    padding: 2px;
+}
+
+.descricao {
+    text-decoration: underline;
+}
+
+.texto {    
+    color: rgb(63, 63, 63);
 }
 
 p {
-    padding-left: 10px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    text-align: justify;
 }
 
 ul {
@@ -80,4 +95,8 @@ ul li::before {
     content: '»';
     font-weight: bold;
     color: rgb(138, 0, 0);
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+    margin-bottom: 10px;
 }
