--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
     padding-bottom: 5px;
     display: flex;
     align-items: center;
-    padding-top: 50px;;
+    padding-top: 60px;
+    border-bottom: 3px solid rgb(70, 70, 70);
 }
     
 .nome {
@@ -26,20 +27,23 @@ body {
     margin: 0px;
     border: 1px solid rgb(141, 141, 141);
     font-size: 40px;
+    box-shadow: inset 0 0  5px rgba(0, 0, 0, 0.3);
 }
 
 .foto {
     margin-left: 5px;
     border-radius: 10px;
-    margin-top: 10px;
-    border: 1px solid rgb(61, 61, 61);
+    border: 2px solid rgb(61, 61, 61);
+    background-color: rgb(197, 197, 197);
 }
 
 .info {
-    text-align:justify;
+    padding-left: 10px;
+    padding-right: 10px;
     margin: 10px;
-    size: 110;
-    width: 50vh;
+    height: 140px;
+    background-color: rgb(197, 197, 197);
+    border-radius: 20px;
 }
 
 .titulo {
@@ -70,20 +74,22 @@ body {
     color: rgb(63, 63, 63);
     background-color: rgb(197, 197, 197);
     border-radius: 5px;
-    padding: 2px;
+    padding: 3px;
 }
 
 .descricao {
     text-decoration: underline;
+    
 }
 
 .texto {    
     color: rgb(63, 63, 63);
+    margin-right: 20px;
+    height: 20px;
 }
 
 p {
     margin-top: 0px;
-    margin-bottom: 10px;
     text-align: justify;
 }
 
@@ -99,4 +105,13 @@ ul li::before {
     width: 1em;
     margin-left: -1em;
     margin-bottom: 10px;
+}
+
+ul li {
+    background-color: rgb(230, 230, 230);
+    height: 100px;
+    padding: 5px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    margin-right: 20px;
 }
