--- a/style.css
+++ b/style.css
@@ -1,117 +1,91 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 body {
     margin: 0;
     padding: 0;
+    background-color: #f0f0f0;
+}
+
+#cabecalho {
+    background-color: #e5e5e5;
+    padding: 10px;
+    text-align: center;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom: 3px solid #acacac;
+}
+
+#conteudo {
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#principal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#informacoes-pessoais {
+    height: 11em;
+    display: flex;
+    margin-right: 20px;
+    background-color: #424242;
+    border-radius: 20px 10px 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: #b8b8b8;
+}
+
+#informacoes-pessoais a {
+    color: #aaaaaa;
+    text-decoration: none;
+    padding: 0 5px;
+    border-radius: 5px;
+}
+
+#informacoes-pessoais a:hover {
+    text-decoration: underline;
+    color: rgb(75, 75, 75);
+    background-color: rgb(209, 209, 209);
+    transition: 0.3s ease-in-out;
+}
+
+#informacoes-pessoais img {
+    border-top-left-radius: 10%;
+    border-bottom-left-radius: 10%;
+    object-fit: cover;
+}
+
+#informacoes-pessoais h3 {
+    color: #ffffff;
+    background-color: #0f0f0f;
+    margin-left: 0;
+    padding: 10px;
+    border-radius: 0 10px 10px 0;
+}
+
+#informacoes-pessoais p {
+    margin-left: 0;
+    padding: 10px;
+    border-radius: 0 10px 10px 0;
 }
 
 #informacoes {
-    background-color: rgb(221, 221, 221);
-    margin: 0%;
-    padding-bottom: 5px;
-    display: flex;
-    align-items: center;
-    padding-top: 60px;
-    border-bottom: 3px solid rgb(70, 70, 70);
-}
-    
-.nome {
-    position: fixed;
-    top: 0;
-    text-align: center;
-    color: rgb(61, 61, 61);
-    background-color: rgb(187, 187, 187);
-    border-bottom-right-radius: 20px;
-    padding: 5px;
-    margin: 0px;
-    border: 1px solid rgb(141, 141, 141);
-    font-size: 40px;
-    box-shadow: inset 0 0  5px rgba(0, 0, 0, 0.3);
-}
-
-.foto {
-    margin-left: 5px;
+    margin: 10px 5px 5px 5px;
+    background-color: #cfcfcf;
     border-radius: 10px;
-    border: 2px solid rgb(61, 61, 61);
-    background-color: rgb(197, 197, 197);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: #272727;
 }
 
-.info {
-    padding-left: 10px;
-    padding-right: 10px;
-    margin: 10px;
-    height: 140px;
-    background-color: rgb(197, 197, 197);
-    border-radius: 20px;
-}
-
-.titulo {
-    border: 1px solid rgb(119, 119, 119);
-    color: rgb(61, 61, 61);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding-left: 10px;
-    background-color: rgb(168, 168, 168);
-    width: 400px;
-}
-
-.contato {
-    color: rgb(97, 97, 97);
-    text-decoration: none;
-    font-style: italic;
-    padding: 2px;
-}
-
-.contato:hover {
-    background-color: rgb(46, 46, 46);
-    color: rgb(255, 255, 255);
-    border-radius: 5px;
-    transition: background-color 0.2s, color 0.2s;
-}
-
-.caracteristica {
-    color: rgb(63, 63, 63);
-    background-color: rgb(197, 197, 197);
-    border-radius: 5px;
-    padding: 3px;
-}
-
-.descricao {
-    text-decoration: underline;
-    
-}
-
-.texto {    
-    color: rgb(63, 63, 63);
-    margin-right: 20px;
-    height: 20px;
-}
-
-p {
-    margin-top: 0px;
-    text-align: justify;
-}
-
-ul {
-    list-style-type: none;
-}
-
-ul li::before {
-    content: '»';
-    font-weight: bold;
-    color: rgb(138, 0, 0);
-    display: inline-block;
-    width: 1em;
-    margin-left: -1em;
-    margin-bottom: 10px;
-}
-
-ul li {
-    background-color: rgb(230, 230, 230);
-    height: 100px;
-    padding: 5px;
-    border-radius: 10px;
-    margin-bottom: 5px;
-    margin-right: 20px;
+#informacoes .titulo {
+    color: #d6d6d6;
+    margin-left: 0;
+    padding:0 0 0 1em;
+    border-radius: 0 10px 10px 0;
+    background-color: #505050;
+    width: 15em;
 }
