--- a/style.css
+++ b/style.css
@@ -26,16 +26,13 @@ body {
 #principal {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 #informacoes-pessoais {
-    height: 11em;
     display: flex;
-    margin-right: 20px;
     background-color: #424242;
-    border-radius: 20px 10px 10px 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 100px;
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
     color: #b8b8b8;
 }
 
@@ -62,9 +59,9 @@ body {
 #informacoes-pessoais h3 {
     color: #ffffff;
     background-color: #0f0f0f;
-    margin-left: 0;
+    width: 12em;
     padding: 10px;
-    border-radius: 0 10px 10px 0;
+    border-radius: 0 100px 100px 0;
 }
 
 #informacoes-pessoais p {
@@ -88,4 +85,42 @@ body {
     border-radius: 0 10px 10px 0;
     background-color: #505050;
     width: 15em;
+}
+
+#informacoes .texto {
+    margin-left: 0;
+    padding:0 0 0 1em;
+    border-radius: 0 10px 10px 0;
+}
+
+#informacoes .caracteristica {
+    font-weight: bold;
+    color: #272727;
+}
+
+#informacoes .descricao {
+    color: #5a5a5a;
+    font-style: italic;
+}
+
+#informacoes .item {
+    margin-left: 0;
+    background-color: #b6b5b5;
+    padding: 10px;
+    border-radius: 10px;
+    margin-right: 20px;
+}
+
+
+
+#informacoes .item:hover {
+    background-color: #a3a3a3;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: 0.3s ease-in-out;
+}
+
+p {
+    font-size: large;
+    margin-left: 20px;
+    margin-right: 20px;
 }
